row nel container service

--- a/index.html
+++ b/index.html
@@ -444,29 +444,168 @@
 
 
             </div>
-            <div class="row">
 
-                <!-- prima colonna  sx -->
+            <div class="container">
+                <div class="row">
 
-                <div class="col-sx-12 col-md-6 debug">
+                    <!-- prima colonna  sx -->
+
+                    <div class="col-sx-12 col-md-6 debug">
 
 
 
-                    <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2   debug   ">
 
-                        <p>ams2</p>
+                            <p>ams2</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>Amsredan ,Netherlnands</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+                    </div>
+
+                    <!-- prima colonna dx -->
+
+
+                    <div class="col-sx-12 col-md-6 debug">
+
+                        <div class="col-xs-2   debug   ">
+
+                            <p>ams2</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>Amsredan ,Netherlnands</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
+
 
 
 
 
 
                     </div>
-                    <div class="col-xs-5 debug text-center   ">
 
 
 
 
-                        <p>Amsredan ,Netherlnands</p>
+                    <!-- seconda colnna sx -->
+
+                    <div class="col-sx-12 col-md-6 debug">
+
+                        <div class="col-xs-2   debug   ">
+
+                            <p>ams3</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>Amsredan ,Netherlnands</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
 
 
 
@@ -474,13 +613,55 @@
 
 
                     </div>
-                    <div class="col-xs-5 debug  text-right ">
+
+                    <!-- seconda colonna dx  -->
+
+                    <div class="col-sx-12 col-md-6 debug">
+
+                        <div class="col-xs-2   debug   ">
+
+                            <p>ams3</p>
 
 
-                        <p>
-                            Test speed >
 
-                        </p>
+
+
+                        </div>
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>Amsredan ,Netherlnands</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
 
 
 
@@ -489,557 +670,381 @@
 
 
                     </div>
+
+
+                    <!-- terza colonna sx  -->
+
+                    <div class="col-sx-12 col-md-6 debug">
+
+
+
+                        <div class="col-xs-2   debug   ">
+
+                            <p>blr1</p>
+
+
+
+
+
+                        </div>
+
+
+
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>Bamngalore,india</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+                    </div>
+
+                    <!-- terza colonna dx -->
+
+                    <div class="col-sx-12 col-md-6 debug">
+
+                        <div class="col-xs-2   debug   ">
+
+                            <p>blr1</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>bangalore,india</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    </div>
+
+
+                    <!-- quarta colonna sx -->
+
+                    <div class="col-sx-12 col-md-6 debug">
+
+                        <div class="col-xs-2   debug   ">
+
+                            <p>Lon1</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>london,uk</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    </div>
+
+                    <!-- quarta colonna dx  -->
+                    <div class="col-sx-12 col-md-6 debug">
+
+                        <div class="col-xs-2   debug   ">
+
+                            <p>lon1</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>London,Uk</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    </div>
+
+
+                    <!-- quinta colonna sx  -->
+
+                    <div class="col-sx-12 col-md-6 debug">
+
+                        <div class="col-xs-2   debug   ">
+
+                            <p>Nyc1</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>New york,Usa</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    </div>
+
+
+                    <!-- quinta colonna dx  -->
+
+                    <div class="col-sx-12 col-md-6 debug">
+
+                        <div class="col-xs-2   debug   ">
+
+                            <p>Nyc1</p>
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug text-center   ">
+
+
+
+
+                            <p>New york, usa</p>
+
+
+
+
+
+
+                        </div>
+                        <div class="col-xs-5 debug  text-right ">
+
+
+                            <p>
+                                Test speed >
+
+                            </p>
+
+
+
+
+
+
+
+                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    </div>
+
+
+
+                    <!-- fine colonne  -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
                 </div>
-
-                <!-- prima colonna dx -->
-
-
-                <div class="col-sx-12 col-md-6 debug">
-
-                    <div class="col-xs-2   debug   ">
-
-                        <p>ams2</p>
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug text-center   ">
-
-
-
-
-                        <p>Amsredan ,Netherlnands</p>
-
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug  text-right ">
-
-
-                        <p>
-                            Test speed >
-
-                        </p>
-
-
-
-
-
-
-
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </div>
-
-
-
-
-                <!-- seconda colnna sx -->
-
-                <div class="col-sx-12 col-md-6 debug">
-
-                    <div class="col-xs-2   debug   ">
-
-                        <p>ams3</p>
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug text-center   ">
-
-
-
-
-                        <p>Amsredan ,Netherlnands</p>
-
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug  text-right ">
-
-
-                        <p>
-                            Test speed >
-
-                        </p>
-
-
-
-
-
-
-
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </div>
-
-                <!-- seconda colonna dx  -->
-
-                <div class="col-sx-12 col-md-6 debug">
-
-                    <div class="col-xs-2   debug   ">
-
-                        <p>ams3</p>
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug text-center   ">
-
-
-
-
-                        <p>Amsredan ,Netherlnands</p>
-
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug  text-right ">
-
-
-                        <p>
-                            Test speed >
-
-                        </p>
-
-
-
-
-
-
-
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </div>
-
-
-                <!-- terza colonna sx  -->
-
-                <div class="col-sx-12 col-md-6 debug">
-
-
-
-                    <div class="col-xs-2   debug   ">
-
-                        <p>blr1</p>
-
-
-
-
-
-                    </div>
-
-
-
-                    <div class="col-xs-5 debug text-center   ">
-
-
-
-
-                        <p>Bamngalore,india</p>
-
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug  text-right ">
-
-
-                        <p>
-                            Test speed >
-
-                        </p>
-
-
-
-
-
-
-
-                    </div>
-
-
-
-                </div>
-
-                <!-- terza colonna dx -->
-
-                <div class="col-sx-12 col-md-6 debug">
-
-                    <div class="col-xs-2   debug   ">
-
-                        <p>blr1</p>
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug text-center   ">
-
-
-
-
-                        <p>bangalore,india</p>
-
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug  text-right ">
-
-
-                        <p>
-                            Test speed >
-
-                        </p>
-
-
-
-
-
-
-
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </div>
-
-
-                <!-- quarta colonna sx -->
-
-                <div class="col-sx-12 col-md-6 debug">
-
-                    <div class="col-xs-2   debug   ">
-
-                        <p>Lon1</p>
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug text-center   ">
-
-
-
-
-                        <p>london,uk</p>
-
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug  text-right ">
-
-
-                        <p>
-                            Test speed >
-
-                        </p>
-
-
-
-
-
-
-
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </div>
-
-                <!-- quarta colonna dx  -->
-                <div class="col-sx-12 col-md-6 debug">
-
-                    <div class="col-xs-2   debug   ">
-
-                        <p>lon1</p>
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug text-center   ">
-
-
-
-
-                        <p>London,Uk</p>
-
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug  text-right ">
-
-
-                        <p>
-                            Test speed >
-
-                        </p>
-
-
-
-
-
-
-
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </div>
-
-
-                <!-- quinta colonna sx  -->
-
-                <div class="col-sx-12 col-md-6 debug">
-
-                    <div class="col-xs-2   debug   ">
-
-                        <p>Nyc1</p>
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug text-center   ">
-
-
-
-
-                        <p>New york,Usa</p>
-
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug  text-right ">
-
-
-                        <p>
-                            Test speed >
-
-                        </p>
-
-
-
-
-
-
-
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </div>
-
-
-                <!-- quinta colonna dx  -->
-
-                <div class="col-sx-12 col-md-6 debug">
-
-                    <div class="col-xs-2   debug   ">
-
-                        <p>Nyc1</p>
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug text-center   ">
-
-
-
-
-                        <p>New york, usa</p>
-
-
-
-
-
-
-                    </div>
-                    <div class="col-xs-5 debug  text-right ">
-
-
-                        <p>
-                            Test speed >
-
-                        </p>
-
-
-
-
-
-
-
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </div>
-
-
-
-                <!-- fine colonne  -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
             </div>
