--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <div class="link-cetral">
                                 <ul>
                                     <li>
-                                        <a href="#">products <i class="fas fa-angle-down"></i></a></a>
+                                        <a href="#">products <i class="fas fa-angle-down"></i></a>
 
                                     </li>
                                     <li>
@@ -60,11 +60,11 @@
 
                                     </li>
                                     <li>
-                                        <a href="#">Community <i class="fas fa-angle-down"></i></a></a>
+                                        <a href="#">Community <i class="fas fa-angle-down"></i></a>
 
                                     </li>
                                     <li>
-                                        <a href="#">Pricing <i class=""></i></a></a>
+                                        <a href="#">Pricing <i class=""></i></a>
                                     </li>
 
                                 </ul>
@@ -433,7 +433,7 @@
         <section id="service">
             <div class="container ">
                 <div class="row text-center ">
-                    <div class="col-xs-12 debug">
+                    <div class="col-xs-12 ">
                         <h1>service you costumers araund the word from 12 regions</h1>
 
                     </div>
@@ -450,11 +450,11 @@
 
                     <!-- prima colonna  sx -->
 
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
 
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2      ">
 
                             <p>ams2</p>
 
@@ -463,7 +463,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5  text-center   ">
 
 
 
@@ -476,7 +476,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5  text-right ">
 
 
                             <p>
@@ -499,9 +499,9 @@
                     <!-- prima colonna dx -->
 
 
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2     ">
 
                             <p>ams2</p>
 
@@ -510,7 +510,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5  text-center   ">
 
 
 
@@ -523,7 +523,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5   text-right ">
 
 
                             <p>
@@ -559,9 +559,9 @@
 
                     <!-- seconda colnna sx -->
 
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2     ">
 
                             <p>ams3</p>
 
@@ -570,7 +570,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5  text-center   ">
 
 
 
@@ -583,7 +583,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5   text-right ">
 
 
                             <p>
@@ -616,9 +616,9 @@
 
                     <!-- seconda colonna dx  -->
 
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2     ">
 
                             <p>ams3</p>
 
@@ -627,7 +627,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5  text-center   ">
 
 
 
@@ -640,7 +640,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5  text-right ">
 
 
                             <p>
@@ -674,11 +674,11 @@
 
                     <!-- terza colonna sx  -->
 
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
 
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2     ">
 
                             <p>blr1</p>
 
@@ -690,7 +690,7 @@
 
 
 
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5  text-center   ">
 
 
 
@@ -703,7 +703,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5   text-right ">
 
 
                             <p>
@@ -725,9 +725,9 @@
 
                     <!-- terza colonna dx -->
 
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2     ">
 
                             <p>blr1</p>
 
@@ -736,7 +736,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5  text-center   ">
 
 
 
@@ -749,7 +749,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5   text-right ">
 
 
                             <p>
@@ -783,9 +783,9 @@
 
                     <!-- quarta colonna sx -->
 
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2      ">
 
                             <p>Lon1</p>
 
@@ -794,7 +794,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5  text-center   ">
 
 
 
