colore scritte service

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
             </div>
 
             <div class="container">
-                <div class="row">
+                <div class="row bg-service">
 
                     <!-- prima colonna  sx -->
 
@@ -807,7 +807,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5   text-right ">
 
 
                             <p>
@@ -839,9 +839,9 @@
                     </div>
 
                     <!-- quarta colonna dx  -->
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2      ">
 
                             <p>lon1</p>
 
@@ -850,7 +850,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5  text-center   ">
 
 
 
@@ -863,7 +863,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5   text-right ">
 
 
                             <p>
@@ -897,9 +897,9 @@
 
                     <!-- quinta colonna sx  -->
 
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2      ">
 
                             <p>Nyc1</p>
 
@@ -908,7 +908,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5 text-center   ">
 
 
 
@@ -921,7 +921,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5   text-right ">
 
 
                             <p>
@@ -955,9 +955,9 @@
 
                     <!-- quinta colonna dx  -->
 
-                    <div class="col-sx-12 col-md-6 debug">
+                    <div class="col-sx-12 col-md-6 ">
 
-                        <div class="col-xs-2   debug   ">
+                        <div class="col-xs-2      ">
 
                             <p>Nyc1</p>
 
@@ -966,7 +966,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug text-center   ">
+                        <div class="col-xs-5  text-center   ">
 
 
 
@@ -979,7 +979,7 @@
 
 
                         </div>
-                        <div class="col-xs-5 debug  text-right ">
+                        <div class="col-xs-5   text-right ">
 
 
                             <p>
