--- a/index.html
+++ b/index.html
@@ -1077,24 +1077,62 @@
                 <div class="row">
                     <div class="col-xs-12  text-center">
                         <h2>
-                            development teams love
+                            development teams love Digital Ocean
 
                         </h2>
 
                         <div class="item text-center">
-                            <div class="img">
-                                rocket box
 
+                            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                                <!-- Indicators -->
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                                </ol>
+
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="item active">
+                                        <div class="img">
+                                            <img src="img/rockerbox.png" alt="">
+                                            <div class="txt">
+                                                questa è una
+                                            </div>
+                                        </div>
+
+
+                                        <div class="carousel-caption">
+                                            ...
+                                        </div>
+                                    </div>
+
+
+                                    ...
+                                </div>
+
+                                <!-- Controls -->
+                                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
                             </div>
-                            <div class="txt-img">
-                                serve 55 second
-                            </div>
+
+
+
 
                         </div>
 
 
                     </div>
+
+
                 </div>
+            </div>
 
 
 
