--- a/index.html
+++ b/index.html
@@ -196,17 +196,16 @@
             <div class="container text-center">
                 <div class="row">
 
-                    <div class="col-xs-12 debug">
-                        innovate business trust digitalocean
+                    <div class="col-xs-12 ">
+                        <h2>innovate business trust digitalocean</h2>
+
                     </div>
                 </div>
 
                 <!-- partners -->
 
                 <div class="row text-center no-gutters">
-                    <div class="col-xs-12 text-uppercase">
-                        <h6>innovative businesses trust digitalocean</h6>
-                    </div>
+
                     <div class="col-xs-6 col-sm-2">
                         <!-- docker-git  -->
                         <img src="img/docker.svg" alt="docker">
@@ -257,14 +256,14 @@
 
                     </div>
 
-                    <div class="col-md-4 col-sm-4 col-xs-12 debug">
+                    <div class="col-md-4 col-sm-4 col-xs-12 ">
                         <img src="img/cluster-deploy.svg" alt="cluster">
                         <h5>clust deploments</h5>
                         <p>
                             provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
                         </p>
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 debug">
+                    <div class="col-md-4 col-sm-4 col-xs-12 ">
                         <img src="img/optimized-compute.svg" alt="opti">
                         <h5>clust deploments</h5>
                         <p>
@@ -274,14 +273,14 @@
                     </div>
 
 
-                    <div class="col-md-4  col-sm-4 col-xs-12 debug">
+                    <div class="col-md-4  col-sm-4 col-xs-12 ">
                         <img src="img/one-click.svg" alt="one click">
                         <h5>clust deploments</h5>
                         <p>
                             provision multiple Droplets (virual machins) in seconds with our control panel,cli,or directly against our API.
                         </p>
                     </div>
-                    <div class="col-md-4  col-sm-4 col-xs-12 debug">
+                    <div class="col-md-4  col-sm-4 col-xs-12 ">
                         <img src="img/global.svg" alt="global">
                         <h5>clust deploments</h5>
                         <p>
@@ -385,7 +384,7 @@
                     <div class="container text-center">
                         <div class="row">
 
-                            <div class="col-xs-12 col-sm-4 col-md-4  debug">
+                            <div class="col-xs-12 col-sm-4 col-md-4  ">
                                 <img src="img/pred-pricing.svg" alt="pred-pricing">
                                 <h5>clust deploments</h5>
                                 <p>
@@ -393,7 +392,7 @@
                                 </p>
                                 <a href="#">pricing ></a>
                             </div>
-                            <div class="col-xs-12 col-sm-4 col-md-4  debug">
+                            <div class="col-xs-12 col-sm-4 col-md-4  ">
                                 <img src="img/world-class.svg" alt="word">
                                 <h5>clust deploments</h5>
                                 <p>
@@ -401,7 +400,7 @@
                                 </p>
                                 <a href="#">support ></a>
                             </div>
-                            <div class="col-xs-12 col-sm-4 col-md-4  debug">
+                            <div class="col-xs-12 col-sm-4 col-md-4  ">
                                 <img src="img/reliable-platform.svg" alt="reliable">
                                 <h5>clust deploments</h5>
                                 <p>
@@ -1097,7 +1096,7 @@
                                         <div class="img">
                                             <img src="img/rockerbox.png" alt="">
                                             <div class="txt">
-                                                questa è una
+                                                we have been
                                             </div>
                                         </div>
 
@@ -1143,11 +1142,17 @@
         <!-- viport 8 get started  -->
 
         <section id="started">
-            <div class="container text-center">
+            <div class="container  bg-white text-center">
                 <div class="row">
-                    <div class="col-xs-12 debug">get started</div>
+                    <div class="col-xs-12 ">
+                        <h2>
+                            get started now
+                        </h2>
+                    </div>
 
-                    <div class="col-xs-12 debug">botton</div>
+                    <div class="col-xs-12 ">
+                        <button type="submit" class="btn btn-default">Create you accaunt</button>
+                    </div>
                 </div>
 
         </section>
@@ -1184,13 +1189,11 @@
 
     <footer>
         <section id="footer">
-            <div class="container text-center">
-                <div class="row">
-                    <div class="col-md-4 col-sm-6 debug">link</div>
-                    <div class="col-md-2  col-sm-6 debug">link</div>
-                    <div class="col-md-2 col-sm-6 debug">link</div>
-                    <div class="col-md-2   debug">link</div>
-                    <div class="col-md-2  debug">link</div>
+            <div class="container ">
+                <div class="row ">
+
+                    <div class="col-md-4 col-sm-12 debug">link</div>
+
 
 
                 </div>
