--- a/index.html
+++ b/index.html
@@ -1193,6 +1193,10 @@
                 <div class="row ">
 
                     <div class="col-md-4 col-sm-12 debug">link</div>
+                    <div class="col-md-2 col-sm-6 debug "></div>
+                    <div class="col-md-2 col-sm-6 debug "></div>
+                    <div class="col-md-2 col-sm-6 debug "></div>
+                    <div class="col-md-2 col-sm-6 debug "></div>
 
 
 
