--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,9 @@
             <div class="container ">
                 <div class="row ">
 
-                    <div class="col-md-4 col-sm-12 debug">link</div>
+                    <div class="col-md-4 col-sm-12 debug">
+                        link
+                    </div>
                     <div class="col-md-2 col-sm-6 debug "></div>
                     <div class="col-md-2 col-sm-6 debug "></div>
                     <div class="col-md-2 col-sm-6 debug "></div>
