--- a/index.html
+++ b/index.html
@@ -1191,14 +1191,13 @@
         <section id="footer">
             <div class="container ">
                 <div class="row ">
+                    <div class="col-xs-12 debug">prove sche footer</div>
+                    <div class="col-xs-12 col-md-6 debug">a</div>
+                    <div class="col-xs-12 col-md-6 debug">b</div>
+                    <div class="col-xs-12 col-md-6 debug">b</div>
+                    <div class="col-xs-12 col-md-6 debug">b</div>
 
-                    <div class="col-md-4 col-sm-12 debug">
-                        link
-                    </div>
-                    <div class="col-md-2 col-sm-6 debug "></div>
-                    <div class="col-md-2 col-sm-6 debug "></div>
-                    <div class="col-md-2 col-sm-6 debug "></div>
-                    <div class="col-md-2 col-sm-6 debug "></div>
+
 
 
 
