--- a/index.html
+++ b/index.html
@@ -1191,17 +1191,50 @@
         <section id="footer">
             <div class="container ">
                 <div class="row ">
-                    <div class="col-xs-12 debug">prove sche footer</div>
-                    <div class="col-xs-12 col-md-6 debug">a</div>
-                    <div class="col-xs-12 col-md-6 debug">b</div>
-                    <div class="col-xs-12 col-md-6 debug">b</div>
-                    <div class="col-xs-12 col-md-6 debug">b</div>
+                    <div class="col-xs-12 col-md-12 col-lg-4 debug ">
 
+                        <img src="img/logo-small.svg" alt="">
 
+                        <p>
+                            &copy; 2018 DigitalOcean, LCC. All rights reserved. <br>
+                            <span>Proudly made in NY</span>
+                        </p>
+                        <div class="">
+                            <ul>
+                                <li>
+                                    <i class="fab fa-twitter"></i>
+                                </li>
+                                <li>
+                                    <i class="fab fa-facebook-square"></i>
+                                </li>
+                                <li>
+                                    <i class="fab fa-instagram"></i>
+                                </li>
+                                <li>
+                                    <i class="fab fa-youtube"></i>
+                                </li>
+                                <li>
+                                    <i class="fab fa-linkedin"></i>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
 
+                    <div class="col-lg-2 md-12 col-xs-12 debug">a</div>
+                    <div class="col-lg-2 md-12 col-xs-12 debug">b</div>
+                    <div class="col-lg-2 md-12 col-xs-12 debug">c</div>
+                    <div class="col-lg-2 md-12 col-xs-12 debug">d</div>
 
 
                 </div>
+
+
+
+
+
+
+
+            </div>
             </div>
 
         </section>
