--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@
         <section id="footer">
             <div class="container ">
                 <div class="row ">
-                    <div class="col-xs-12 col-md-12 col-lg-4 debug ">
+                    <div class="col-xs-12 col-md-12 col-lg-3 debug ">
 
                         <img src="img/logo-small.svg" alt="">
 
@@ -1220,10 +1220,28 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-2 md-12 col-xs-12 debug">a</div>
-                    <div class="col-lg-2 md-12 col-xs-12 debug">b</div>
-                    <div class="col-lg-2 md-12 col-xs-12 debug">c</div>
-                    <div class="col-lg-2 md-12 col-xs-12 debug">d</div>
+
+                    <!-- da mattere dentro al tag a  -->
+
+                    <div class="col-lg-3 md-6 col-sm-6 col-xs-12 debug">
+                        <ul class="nav nav-pills nav-stacked">
+                            <li>Compamy</li>
+                            <li>abaut</li>
+                            <li>Ledearship</li>
+                            <li>link </li>
+                            <li>blog</li>
+                            <li>carers</li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+
+                    </div>
+                    <div class="col-lg-2 md-6 col-sm-6 col-xs-12 debug">b</div>
+                    <div class="col-lg-2 md-6 col-sm-6 col-xs-12 debug">c</div>
+                    <div class="col-lg-2 md-6 col-sm-6 col-xs-12 debug">d</div>
 
 
                 </div>
