finito ma da sistemare con classi margini e classi colore txt

--- a/index.html
+++ b/index.html
@@ -1231,17 +1231,60 @@
                             <li>link </li>
                             <li>blog</li>
                             <li>carers</li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Partenr </li>
+                            <li>Referral</li>
+                            <li>Events</li>
+                            <li>Press</li>
+                            <li>Legal & Security</li>
                         </ul>
 
                     </div>
-                    <div class="col-lg-2 md-6 col-sm-6 col-xs-12 debug">b</div>
-                    <div class="col-lg-2 md-6 col-sm-6 col-xs-12 debug">c</div>
-                    <div class="col-lg-2 md-6 col-sm-6 col-xs-12 debug">d</div>
+                    <div class="col-lg-2 md-6 col-sm-6 col-xs-12 debug">
+                        <ul class="nav nav-pills nav-stacked">
+                            <li>Compamy</li>
+                            <li>abaut</li>
+                            <li>Ledearship</li>
+                            <li>link </li>
+                            <li>blog</li>
+                            <li>carers</li>
+                            <li>Partenr </li>
+                            <li>Referral</li>
+                            <li>Events</li>
+                            <li>Press</li>
+                            <li>Legal & Security</li>
+                        </ul>
+
+                    </div>
+                    <div class="col-lg-2 md-6 col-sm-6 col-xs-12 debug">
+                        <ul class="nav nav-pills nav-stacked">
+                            <li>Compamy</li>
+                            <li>abaut</li>
+                            <li>Ledearship</li>
+                            <li>link </li>
+                            <li>blog</li>
+                            <li>carers</li>
+                            <li>Partenr </li>
+                            <li>Referral</li>
+                            <li>Events</li>
+                            <li>Press</li>
+                            <li>Legal & Security</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-2 md-6 col-sm-6 col-xs-12 debug">
+                        <ul class="nav nav-pills nav-stacked">
+                            <li>Compamy</li>
+                            <li>abaut</li>
+                            <li>Ledearship</li>
+                            <li>link </li>
+                            <li>blog</li>
+                            <li>carers</li>
+                            <li>Partenr </li>
+                            <li>Referral</li>
+                            <li>Events</li>
+                            <li>Press</li>
+                            <li>Legal & Security</li>
+                        </ul>
+                    </div>
 
 
                 </div>
