--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@
 
                             </div>
 
-
-
-
-
-
                         </div>
-
 
                     </div>
 
@@ -114,23 +108,14 @@
 
                 </div>
             </div>
-
-
-        </div>
-        <div class="header-bottom">
-
         </div>
 
-
-
-
-
+        <div class="header-bottom"></div>
 
     </header>
 
 
     <!-- fine header  -->
-
     <main>
         <!-- vioport 1  -->
 
@@ -143,7 +128,9 @@
                             the simplest cloud platformfor developers & teams
 
                         </h1>
-                        <p>We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more. </p>
+                        <p>
+                            We make it simple to launch in the cloud and scale up as you grow – with an intuitive control panel, predictable pricing, team accounts, and more.
+                        </p>
                     </div>
                     <div class="col-xs-12 col-md-6 bg-white  ">
                         <h1>
@@ -163,10 +150,12 @@
                             </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">create you accaunt</button>
                             <button type="button" class="btn btn-primary btn-lg btn-block">
-                            
-                            <i class="fab fa-google "></i>
-                            ceate yor accaunt
-                            </button>
+
+                       </form>     
+
+                         <i class="fab fa-google "></i>
+                        ceate yor accaunt
+                     </button>
                             <p>
                                 by signging up you agree to the
                                 <a href="#">termes of service</a>
