--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
                                         <a href="#">login <i class=""></i></a></a>
                                     </li>
                                     <li>
-                                        <button type="submit" class="btn btn-default">Sign Up</button>
+                                        <button type="submit" class="btn btn-default">
+                      Sign Up
+                    </button>
 
                                     </li>
                                 </ul>
 
                             </div>
                         </div>
-                        <div class=" visible-xs visible-sm visible-md  ">
+                        <div class=" hamburger-menu visible-xs visible-sm visible-md  ">
                             <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
                         </div>
 
@@ -144,23 +146,34 @@
 
                                 <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
                             </div>
+
                             <div class="form-group">
 
                                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+
                             </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">create you accaunt</button>
                             <button type="button" class="btn btn-primary btn-lg btn-block">
+                            create you accaunt
 
-                       </form>     
+                            </button>
+                            <button type="button" class="btn bg-bt btn-primary btn-lg btn-block">
+                              <i class="fab fa-google "></i>
+                             <p>sig up with google</p>
+                             </button>
+                        </form>
 
-                         <i class="fab fa-google "></i>
-                        ceate yor accaunt
-                     </button>
+                        <div class="div">
                             <p>
                                 by signging up you agree to the
                                 <a href="#">termes of service</a>
 
                             </p>
+
+                        </div>
+
+
+
+
 
                     </div>
 
@@ -168,9 +181,6 @@
 
                 </div>
             </div>
-
-
-
         </div>
 
 
@@ -219,7 +229,7 @@
                         <!-- hashi2-splunk -->
                         <img src="img/splunk.svg" alt="splunk">
                     </div>
-                    <div class="col-xs-12">
+                    <div class=" last col-xs-12">
                         <a href="#">View customer stories ></a>
                     </div>
 
@@ -307,46 +317,48 @@
                             Build more and spend managing yourinfrastructure with our easy-to -use control panel api
                         </p>
                         <div class="item">
-                            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                                <!-- Indicators -->
-                                <ol class="carousel-indicators">
-                                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                                </ol>
+                            <div class="container">
+                                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                                    <!-- Indicators -->
+                                    <ol class="carousel-indicators">
+                                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                                    </ol>
 
-                                <!-- Wrapper for slides -->
-                                <div class="carousel-inner" role="listbox">
-                                    <div class="item active">
-                                        <img src="img/slide.jpg" alt="...">
-                                        <div class="carousel-caption">
-                                            ...
+                                    <!-- Wrapper for slides -->
+                                    <div class="carousel-inner" role="listbox">
+                                        <div class="item active">
+                                            <img src="img/slide.jpg" alt="...">
+
                                         </div>
+
+
+
                                     </div>
 
-
-                                    ...
+                                    <!-- Controls -->
+                                    <a class="left-carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="right-carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
                                 </div>
 
-                                <!-- Controls -->
-                                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>
                             </div>
+
 
                         </div>
 
 
-
-
-
-
                     </div>
+
+
+
+
                 </div>
 
 
